# stevensLewis

./: AircraftControl.py  AircraftControl3DOF.py  AircraftControl6DOF.py  AircraftControlToolbox.py  NatuurlikeFrekwensieDemping.md  NumerieseJakobiaan.md  README.md  StevensLewis.py  TransportAircraft.ods  Voorbeeld 3_7-6.csv  gelykvlugvoorbeeld.csv  joystick_voorbeeld.py  puntmassa.md  pyproject.toml  voorbeelde.py
