[project]
name = "toets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmake>=3.31.4",
    "control>=0.10.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pygame>=2.6.1",
    "scikit-build>=0.18.1",
    "scipy>=1.15.0",
]
